force-app/main/default/objects/Book_Review__c/Book_Review__c.object-meta.xml
<CustomObject>
    <label>Book Review</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Book Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>