force-app/main/default/objects/Book_Review__c/fields/Book__c.field-meta.xml
<CustomField>
    <fullName>Book__c</fullName>
    <description>Master - Detail relationship with associated Book</description>
    <inlineHelpText>Master - Detail relationship with associated Book</inlineHelpText>
    <label>Book</label>
    <referenceTo>Book__c</referenceTo>
    <relationshipLabel>Book Reviews</relationshipLabel>
    <relationshipName>Book_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>