force-app/main/default/objects/Book_Review__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Book review comment</description>
    <inlineHelpText>Book review comment</inlineHelpText>
    <label>Comment</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>