force-app/main/default/objects/Book_Review__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Associated book rating</description>
    <inlineHelpText>Associated book rating</inlineHelpText>
    <label>Rating</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>