force-app/main/default/objects/Book_Review__c/fields/Rating_Number__c.field-meta.xml
<CustomField>
    <fullName>Rating_Number__c</fullName>
    <description>Gets numeric value of rating picklist</description>
    <formula>VALUE( TEXT(Rating__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rating Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>