force-app/main/default/objects/Book_Review__c/fields/Stars__c.field-meta.xml
<CustomField>
    <fullName>Stars__c</fullName>
    <formula>CASE(TEXT(Rating__c),

 &apos;1&apos;, IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20) &amp; 
      IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20) &amp; 
      IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20),
 
 &apos;2&apos;, IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; 
      IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20) &amp; 
      IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20),

 &apos;3&apos;, IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; 
      IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20) &amp; 
      IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20),

 &apos;4&apos;, IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; 
      IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; 
      IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20),

 &apos;5&apos;, IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; 
      IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20) &amp; 
      IMAGE(&apos;/resource/filledStar&apos;, &apos;&apos; , 20, 20),
 
IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20) &amp; IMAGE(&apos;/resource/emptyStar&apos;, &apos;&apos; , 20, 20) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stars</label>
    <type>Text</type>
</CustomField>