force-app/main/default/objects/Book_Review__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Master - Detail relationship with associated User</description>
    <inlineHelpText>Master - Detail relationship with associated User</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Book_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>