force-app/main/default/objects/Book_Review__c/validationRules/Cannot_Review_Own_Book.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Review_Own_Book</fullName>
    <active>true</active>
    <errorConditionFormula>$User.Id = Book__r.CreatedById</errorConditionFormula>
    <errorDisplayField>Book__c</errorDisplayField>
    <errorMessage>You cannot post a review for a book you&apos;ve created</errorMessage>
</ValidationRule>